test/asn/out/test_types.h

#ifndef GENERATED_ASN1SCC_test_types_H
#define GENERATED_ASN1SCC_test_types_H
/*
Code automatically generated by asn1scc tool
*/
#include "asn1crt.h"

#ifdef  __cplusplus
extern "C" {
#endif


typedef asn1SccUint MyInt;


flag MyInt_Equal(const MyInt* pVal1, const MyInt* pVal2);

void MyInt_Initialize(MyInt* pVal);

#define ERR_MYINT		1  /**/
flag MyInt_IsConstraintValid(const MyInt* pVal, int* pErrCode);
typedef flag MyBool;


flag MyBool_Equal(const MyBool* pVal1, const MyBool* pVal2);

void MyBool_Initialize(MyBool* pVal);

#define ERR_MYBOOL		6  /**/
flag MyBool_IsConstraintValid(const MyBool* pVal, int* pErrCode);
typedef enum {
    hello = 0,
    world = 1
} MyEnum;

// please use the following macros to avoid breaking code.
#define MyEnum_hello hello
#define MyEnum_world world

flag MyEnum_Equal(const MyEnum* pVal1, const MyEnum* pVal2);

void MyEnum_Initialize(MyEnum* pVal);

#define ERR_MYENUM		11  /**/
flag MyEnum_IsConstraintValid(const MyEnum* pVal, int* pErrCode);
/*-- MySeq --------------------------------------------*/
typedef struct {
    MyInt a;
    MyBool b;
    MyEnum c;

} MySeq;

flag MySeq_Equal(const MySeq* pVal1, const MySeq* pVal2);

void MySeq_Initialize(MySeq* pVal);

#define ERR_MYSEQ		46  /**/
#define ERR_MYSEQ_A_2		21  /**/
#define ERR_MYSEQ_B_2		31  /**/
#define ERR_MYSEQ_C_2		41  /**/
flag MySeq_IsConstraintValid(const MySeq* pVal, int* pErrCode);

 

/* ================= Encoding/Decoding function prototypes =================
 * These functions are placed at the end of the file to make sure all types
 * have been declared first, in case of parameterized ACN encodings
 * ========================================================================= */

 


#ifdef  __cplusplus
}

#endif

#endif